property_label -> property_id
